Disable for update

--- a/.github/workflows/notify_discord.yml
+++ b/.github/workflows/notify_discord.yml
@@ -3,7 +3,7 @@ name: Notify Discord on Update
 on:
   push:
     branches:
-      - main  # adjust this value based on the branch in your repository
+      -   # adjust this value based on the branch in your repository
 
 jobs:
   notify_discord:
