--- a/.github/workflows/notify_discord.yml
+++ b/.github/workflows/notify_discord.yml
@@ -18,6 +18,7 @@ jobs:
             "embeds": [
               {
                 "title": "Website Updated!",
+                "title_url": "https://blugrayguylegit.github.io/Skibidi-toilet-community/"
                 "description": "The website is updated or online!",
                 "color": 3066993
                 "footer": "BlugrayGuy.com"
