--- a/.github/workflows/notify_discord.yml
+++ b/.github/workflows/notify_discord.yml
@@ -18,7 +18,7 @@ jobs:
             "embeds": [
               {
                 "title": "Website Updated!",
-                "url": "https://blugrayguylegit.github.io/Skibidi-toilet-community/",
+                "url": "https://blugrayguylegit.github.io/blugray/",
                 "description": "The website is updated or online!",
                 "color": 3066993,
                 "footer": {"text": "BlugrayGuy.com"}
